samples/_failures_safe/1761469184_d6a3c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b802732a.c: In function ‘main’:
./samples/SAFE/__tmp_b802732a.c:203:12: error: missing terminating " character
  203 |     printf("Type\t\t
      |            ^~~~~~~~~
./samples/SAFE/__tmp_b802732a.c:203:5: error: expected expression at end of input
  203 |     printf("Type\t\t
      |     ^~~~~~
./samples/SAFE/__tmp_b802732a.c:203:5: error: expected declaration or statement at end of input
